--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="/Portfolio/index.css">
 </head>
   <body class="bg-light text-slate-900 dark:bg-dark dark:text-slate-100 transition-colors duration-300 bg-dot-pattern">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/Portfolio/index.tsx"></script>
   </body>
 </html>
