Update script source path in index.html

--- a/index.html
+++ b/index.html
@@ -145,6 +145,6 @@
 </head>
   <body class="bg-light text-slate-900 dark:bg-dark dark:text-slate-100 transition-colors duration-300 bg-dot-pattern">
     <div id="root"></div>
-    <script type="module" src="/Portfolio/index.tsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
